@@ -1,0 +1,7 @@
+package org.cmdbuild.data.store.session;
+
+import org.cmdbuild.data.store.Storable;
+
+public interface Session extends Storable{
+
+}
