@@ -3,6 +3,8 @@ CMDBuild 2.4.1 (released YYYY/MM/DD)
 
 NEW FEATURES
 
+ *  Single authentication system used by all web service
+
 
 FIXES
 
